Add C# build targets import

--- a/src/AreaManager/AreaManager.csproj
+++ b/src/AreaManager/AreaManager.csproj
@@ -53,4 +53,5 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
